--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <form id="form" class="form">
         <h2>Register With Us</h2>
         <div class="form-control">
+          <label for="fullname">Username</label>
+          <input type="text" id="fullname" placeholder="Full Name" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
           <label for="username">Username</label>
           <input type="text" id="username" placeholder="Enter username" />
           <small>Error message</small>
